// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CityCard temperature color coding should render blue for 5°C or below temperature 1`] = `
<DocumentFragment>
  <div
    class="m-2 items-center flex flex-col md:flex-row md:justify-center cursor-default"
  >
    <div
      class="w-60 transition duration-500 ease-in-out transform bg-white rounded-lg hover:scale-105 cursor-pointer border flex flex-col justify-center items-center text-center p-6"
    >
      <div
        class="text-md flex flex-col text-gray-900"
      >
        <span
          class="uppercase font-bold"
        >
          City 1
        </span>
      </div>
      <div
        class="flex gap-1"
      >
        <div
          class="flex flex-col items-center p-1 rounded-lg bg-sky-500/20"
        >
          <span
            class="text-xs text-gray-900"
          >
            Temp
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            5 °C
          </span>
        </div>
        <div
          class="flex flex-col items-center p-1 rounded-lg "
        >
          <span
            class="text-xs text-gray-900"
          >
            Pressure
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            1014
          </span>
        </div>
        <div
          class="flex flex-col items-center p-1 rounded-lg "
        >
          <span
            class="text-xs text-gray-900"
          >
            Hum
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            89%
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CityCard temperature color coding should render orange for temperature between 5°C and 26°C 1`] = `
<DocumentFragment>
  <div
    class="m-2 items-center flex flex-col md:flex-row md:justify-center cursor-default"
  >
    <div
      class="w-60 transition duration-500 ease-in-out transform bg-white rounded-lg hover:scale-105 cursor-pointer border flex flex-col justify-center items-center text-center p-6"
    >
      <div
        class="text-md flex flex-col text-gray-900"
      >
        <span
          class="uppercase font-bold"
        >
          City 2
        </span>
      </div>
      <div
        class="flex gap-1"
      >
        <div
          class="flex flex-col items-center p-1 rounded-lg bg-orange-500/20"
        >
          <span
            class="text-xs text-gray-900"
          >
            Temp
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            25 °C
          </span>
        </div>
        <div
          class="flex flex-col items-center p-1 rounded-lg "
        >
          <span
            class="text-xs text-gray-900"
          >
            Pressure
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            1014
          </span>
        </div>
        <div
          class="flex flex-col items-center p-1 rounded-lg "
        >
          <span
            class="text-xs text-gray-900"
          >
            Hum
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            89%
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CityCard temperature color coding should render red for temperature above 25°C 1`] = `
<DocumentFragment>
  <div
    class="m-2 items-center flex flex-col md:flex-row md:justify-center cursor-default"
  >
    <div
      class="w-60 transition duration-500 ease-in-out transform bg-white rounded-lg hover:scale-105 cursor-pointer border flex flex-col justify-center items-center text-center p-6"
    >
      <div
        class="text-md flex flex-col text-gray-900"
      >
        <span
          class="uppercase font-bold"
        >
          City 3
        </span>
      </div>
      <div
        class="flex gap-1"
      >
        <div
          class="flex flex-col items-center p-1 rounded-lg bg-red-500/20"
        >
          <span
            class="text-xs text-gray-900"
          >
            Temp
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            26 °C
          </span>
        </div>
        <div
          class="flex flex-col items-center p-1 rounded-lg "
        >
          <span
            class="text-xs text-gray-900"
          >
            Pressure
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            1014
          </span>
        </div>
        <div
          class="flex flex-col items-center p-1 rounded-lg "
        >
          <span
            class="text-xs text-gray-900"
          >
            Hum
          </span>
          <span
            class="text-base font-bold text-gray-900"
          >
            89%
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
